# systolic-array-hls

./: README.md  globals.h  hls.app  mb_item.h  pe_cycle.h  pe_state.h  processing_element.v  processing_element_tb.v  schedule_utils.h  systolic_array.cpp  systolic_array.h  systolic_array_accumulate_tb.cpp  systolic_array_elementwise_tb.cpp
solution1/: directives.tcl  script.tcl  solution1.aps  solution1_data.json
solution1/impl/misc/: systolic_array_fadd_32ns_32ns_32_3_full_dsp_1_ip.tcl  systolic_array_fmul_32ns_32ns_32_2_max_dsp_1_ip.tcl
solution1/impl/misc/drivers/systolic_array_v1_0/src/: CMakeLists.txt  Makefile  xsystolic_array.c  xsystolic_array.h  xsystolic_array_hw.h  xsystolic_array_linux.c  xsystolic_array_sinit.c
solution1/impl/verilog/: systolic_array.v  systolic_array_fadd_32ns_32ns_32_3_full_dsp_1.v  systolic_array_flow_control_loop_pipe_sequential_init.v  systolic_array_produced_isWeight_RAM_AUTO_1R1W.v  systolic_array_regslice_both.v  systolic_array_systolic_array_stream_MBItem_0_stream_MBItem_0_bool_int_peState_10_RAM_AUTO_1bkb.v  systolic_array_systolic_array_stream_MBItem_0_stream_MBItem_0_bool_int_peState_14_RAM_AUTO_1dEe.v  systolic_array_systolic_array_stream_MBItem_0_stream_MBItem_0_bool_int_peState_4_RAM_AUTO_1R1W.v  systolic_array_systolic_array_stream_MBItem_0_stream_MBItem_0_bool_int_peState_8_RAM_AUTO_1R1W.v
solution1/impl/vhdl/: systolic_array_control_s_axi.vhd  systolic_array_fifo_w160_d32_A.vhd  systolic_array_flow_control_loop_pipe_sequential_init.vhd  systolic_array_produced_destPE_RAM_AUTO_1R1W.vhd  (+5 more)
(+34 files in other folders)
